# ConnectFour

./: CBoardWidget.cpp  CBoardWidget.hpp  CButton.cpp  CButton.hpp  CGameMaster.cpp  CGameMaster.hpp  CListbox.cpp  CListbox.hpp  CMakeLists.txt  CNextPlayerWidget.cpp  CNextPlayerWidget.hpp  CSpinbox.cpp  CSpinbox.hpp  CStatusWidget.cpp  CStatusWidget.hpp  CWidget.cpp  CWidget.hpp  main.cpp
